--- a/meta/configs/brew.yaml
+++ b/meta/configs/brew.yaml
@@ -38,7 +38,7 @@
     - sass/sass/sass
     - sassc
     - telegram
-    - thunderbird-beta
+    - thunderbird
     - xxh
     - visual-studio-code
     - vlc
