--- a/meta/configs/brew.yaml
+++ b/meta/configs/brew.yaml
@@ -22,6 +22,7 @@
     - hugo
     - iterm2
     - libreoffice
+    - mactex
     - node
     - nvm
     - openssl
@@ -31,11 +32,13 @@
     - python@3.9
     - pipenv
     - postgresql
+    - r
     - rust
     - slack
     - sass/sass/sass
     - sassc
     - telegram
+    - thunderbird
     - xxh
     - visual-studio-code
     - vlc
