--- a/.editorconfig
+++ b/.editorconfig
@@ -11,9 +11,70 @@ indent_size = 2
 indent_style = space
 insert_final_newline = true
 charset = utf-8
+trim_trailing_whitespace=true
 
+# Specific file
 [ChangeLog]
 indent_size = 8
+
+[[Mm]akefile]
+indent_style = tab
+indent_size = 4
+max_line_length = null
+
+[package.json]
+indent_style = space
+indent_size = 2
+max_line_length = null
+
+# Type of files
+
+[*.css]
+indent_style = tab
+indent_size = 4
+
+[*.gemspec]
+indent_size = 2
+
+[*.go]
+indent_style = tab
+indent_size = 4
+
+[*.html]
+indent_style = tab
+indent_size = 4
+
+[*.java]
+indent_style = space
+indent_size = 2
+end_of_line = lf
+charset = utf-8
+trim_trailing_whitespace = true
+insert_final_newline = true
+
+[*.js]
+indent_style = tab
+indent_size = 2
+
+[*.json]
+max_line_length = null
+
+[*.md]
+trim_trailing_whitespace = false
+max_line_length = null
+
+[**.min.js]
+indent_style = ignore
+insert_final_newline = ignore
+max_line_length = null
+
+[*.php]
+charset = utf-8
+end_of_line = lf
+insert_final_newline = true
+trim_trailing_whitespace = true
+indent_style = space
+indent_size = 4
 
 [*.py]
 indent_style = space
@@ -24,17 +85,7 @@ end_of_line = lf
 charset = utf-8
 max_line_length = 119
 
-
-[*.html]
-indent_style = tab
-indent_size = 4
-
-[*.css]
-indent_style = tab
-indent_size = 4
-
-[*.js]
-indent_style = tab
+[*.rb]
 indent_size = 2
 
 [*.rs]
@@ -44,41 +95,19 @@ trim_trailing_whitespace = true
 indent_style = space
 indent_size = 4
 
-[*.php]
+[*.scss]
 charset = utf-8
+indent_size = 4
+indent_style = space
 end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
-indent_style = space
-indent_size = 4
 
-[*.go]
-indent_style = tab
-indent_size = 4
-
-[{*.md,*.json}]
-max_line_length = null
-
-[*.{yml,yaml}]
-indent_style = space
-indent_size = 2
-
-[{Makefile, makefile}]
-indent_style = tab
-indent_size = 4
-
-[{package.json,.travis.yml}]
-indent_style = space
-indent_size = 2
-
-[**.min.js]
-indent_style = ignore
-insert_final_newline = ignore
-
-[*.{tex,cls,lua}]
+[*.tex]
 indent_style = space
 indent_size = 3
 charset = utf-8
 
-[*.md]
-trim_trailing_whitespace = false
+[*.{yml,yaml}]
+indent_style = space
+indent_size = 2
