Add folder to git command

--- a/meta/configs/git.yaml
+++ b/meta/configs/git.yaml
@@ -3,6 +3,7 @@
     ~/Coding/Alilaguna:
     ~/Coding/Elan42:
     ~/Coding/Personale:
+    ~/Coding/VeniceBotCenter:
 
 - link:
     ~/.gitattributes:
